--- a/index.html
+++ b/index.html
@@ -884,17 +884,16 @@ async function handleSaveWarga(e) {
     e.preventDefault();
     toggleLoading(true);
 
-    // ====== Ambil NIK Lama Jika Edit ======
     const originalNik = document.getElementById("f-original-nik").value;
 
-    // ====== Ambil Foto Lama ======
+    // Ambil foto lama
     let existingFoto = "";
     if (originalNik) {
-        const found = allData.find(w => w.NIK == originalNik);
-        if (found) existingFoto = found.Foto || "";
+        const f = allData.find(x => x.NIK == originalNik);
+        if (f) existingFoto = f.Foto || "";
     }
 
-    // ====== Proses Foto Baru ======
+    // Proses foto baru
     let fotoBase64 = "";
     const fotoFile = document.getElementById("f-foto").files[0];
     if (fotoFile) {
@@ -905,36 +904,36 @@ async function handleSaveWarga(e) {
         });
     }
 
-    // ====== Ambil form field ======
+    // Baca field form
     const fBlok  = document.getElementById("f-blok").value;
     const fNomer = document.getElementById("f-nomer").value;
     const fRT    = document.getElementById("f-rt").value;
     const alamatTinggal = `Blok ${fBlok} No ${fNomer} RT 0${fRT}`;
 
-    // ====== Payload ======
     const payload = {
         originalNik: originalNik,
-        nik: document.getElementById('f-nik').value,
-        kk: document.getElementById('f-kk').value,
-        nama: document.getElementById('f-nama').value,
-        kelamin: document.getElementById('f-kelamin').value,
-        agama: document.getElementById('f-agama').value,
-        tempat: document.getElementById('f-tempat').value,
-        tanggal: document.getElementById('f-tanggal').value,
-        perkawinan: document.getElementById('f-perkawinan').value,
-        tinggal: document.getElementById('f-tinggal').value,
+        nik: document.getElementById("f-nik").value,
+        kk: document.getElementById("f-kk").value,
+        nama: document.getElementById("f-nama").value,
+        kelamin: document.getElementById("f-kelamin").value,
+        agama: document.getElementById("f-agama").value,
+        tempat: document.getElementById("f-tempat").value,
+        tanggal: document.getElementById("f-tanggal").value,
+        perkawinan: document.getElementById("f-perkawinan").value,
+        tinggal: document.getElementById("f-tinggal").value,
         blok: fBlok,
         nomer: fNomer,
         rt: fRT,
-        alamatKTP: document.getElementById('f-alamat-ktp').value,
+        alamatKTP: document.getElementById("f-alamat-ktp").value,
         alamatTinggal: alamatTinggal,
-        statusKel: document.getElementById('f-status-kel').value,
-        hp: document.getElementById('f-hp').value,
-        pekerjaan: document.getElementById('f-pekerjaan').value,
-        fotoData: fotoBase64 || ""
+        statusKel: document.getElementById("f-status-kel").value,
+        hp: document.getElementById("f-hp").value,
+        pekerjaan: document.getElementById("f-pekerjaan").value,
+        fotoData: fotoBase64 || ""   // jika kosong → pakai foto lama di server
     };
 
     try {
+        // Kirim ke server
         await fetch(API_URL, {
             method: "POST",
             body: JSON.stringify({
@@ -943,36 +942,25 @@ async function handleSaveWarga(e) {
             })
         });
 
-        // Refresh Data
+        // Refresh data global
         await refreshData();
 
-        // Data updated
-        const updated = allData.find(w => w.NIK == payload.nik);
-
-        // ====== TUTUP FORM EDIT ======
+        // Tutup modal edit
         document.getElementById("edit-modal").style.display = "none";
 
-        // ====== NOTIFIKASI ======
-        alert("Data berhasil disimpan!");
+        // Tampilkan halaman detail warga yang baru disimpan
+        showDetail(payload.nik);
 
-        // ====== TAMPILKAN HALAMAN DETAIL ======
-        if (updated) {
-            showDetail(updated);
-        }
+        alert("Data berhasil disimpan!");
 
     } catch (err) {
         console.error("SAVE ERROR:", err);
+        alert("Gagal menyimpan data!");
 
     } finally {
         toggleLoading(false);
     }
 }
-
-
-
-
-
-
 
 
 
