--- a/index.html
+++ b/index.html
@@ -969,9 +969,7 @@ showDetail(payload.nik);
         // Tampilkan halaman detail warga yang baru disimpan
         showDetail(payload.nik);
 
-setTimeout(() => {
-    showSuccessPopup("Data berhasil disimpan!");
-}, 50);
+alert("Data berhasil disimpan!");
 
 
     } catch (err) {
