--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         if (nik) showDetail(nik);
     } else {
         const page = hash.replace('#', '') || 'dashboard';
-        navigate(page); [cite: 87]
+        navigate(page);
     }
 });
     
