--- a/index.html
+++ b/index.html
@@ -368,12 +368,11 @@
     <label class="text-[10px] font-black text-slate-400 uppercase tracking-widest px-1">Foto Warga</label>
     
     <div class="relative">
-        <input type="file" 
-               id="f-foto" 
-               accept="image/*" 
-               capture="environment"
-               class="hidden" 
-               onchange="previewFoto(this)">
+<input type="file" 
+       id="f-foto" 
+       accept="image/*" 
+       class="hidden" 
+       onchange="previewFoto()">
 
         <label for="f-foto" class="flex flex-col items-center justify-center w-full min-h-[120px] p-4 border-2 border-dashed border-slate-200 rounded-3xl bg-slate-50 hover:bg-slate-100 hover:border-indigo-300 transition-all cursor-pointer group">
             
