--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
 .animate-popup {
     animation: popupScale 0.4s ease;
 }
+    @keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  75% { transform: translateX(5px); }
+}
+.animate-shake {
+  animation: shake 0.2s ease-in-out 0s 2;
+  border-color: #ef4444 !important;
+}
 
   </style>
 </head>
