--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@ async function handleSaveWarga(e) {
     }
     toggleLoading(true);
 
-    const originalNik = document.getElementById("f-original-nik").value;
+    // const originalNik = document.getElementById("f-original-nik").value;
 
     // Ambil foto lama
     let existingFoto = "";
