--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@ showToast("Data berhasil disimpan!");
         container.classList.add("hidden");      // Sembunyikan kotak foto
         placeholder.classList.remove("hidden"); // Munculkan ikon "Add Photo" lagi
     }
-      / Sembunyikan pesan error NIK jika sebelumnya sempat muncul
+      // Sembunyikan pesan error NIK jika sebelumnya sempat muncul
     const elErrorNik = document.getElementById("error-nik");
     if(elErrorNik) elErrorNik.classList.add('hidden');
     
