--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <div class="bg-indigo-50 p-4 rounded-2xl space-y-4">
                   <p class="text-[10px] font-black text-indigo-400 uppercase tracking-widest">Alamat Tinggal Sekarang</p>
                   <div class="grid grid-cols-3 gap-2">
-                    <div><label class="form-label">Blok<span class="required-icon">*</span></label><select id="f-blok" class="modern-input !pl-4" onchange="syncKtp()"><option value="A">A</option><option value="B">B</option><option value="B1">B1</option><option value="C">C</option><option value="D">D</option><option value="E">E</option><option value="F">F</option><option value="G">G</option><option value="G">Masjid</option></select></div>
+                    <div><label class="form-label">Blok<span class="required-icon">*</span></label><select id="f-blok" class="modern-input !pl-4" onchange="syncKtp()"><option value="A">A</option><option value="B">B</option><option value="B1">B1</option><option value="C">C</option><option value="D">D</option><option value="E">E</option><option value="F">F</option><option value="G">G</option><option value="Masjid">Masjid</option></select></div>
                     <div><label class="form-label">No<span class="required-icon">*</span></label><input type="text" id="f-nomer" class="modern-input !pl-4" oninput="syncKtp()" required></div>
                     <div><label class="form-label">RT<span class="required-icon">*</span></label><select id="f-rt" class="modern-input !pl-4" onchange="syncKtp()"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option></select></div>
                   </div>
