--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       background: body.dark ? rgba(30,41,59,0.8) : rgba(255,255,255,0.9);
       background-color: var(--card-bg);
     }
-    /* .bottom-nav { position: fixed; bottom: 0px; left: 0px; right: 0px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); height: 70px; border-radius: 20px 20px 0 0; display: flex; align-items: center; justify-content: space-around; box-shadow: 0 -6px 20px rgba(0,0,0,0.1); z-index: 4000; } */
+    .bottom-nav { position: fixed; bottom: 0px; left: 0px; right: 0px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); height: 70px; border-radius: 20px 20px 0 0; display: flex; align-items: center; justify-content: space-around; box-shadow: 0 -6px 20px rgba(0,0,0,0.1); z-index: 4000; }
     .nav-item { color: var(--pastel-muted); display: flex; flex-direction: column; align-items: center; font-size: 9px; font-weight: 800; text-transform: uppercase; border: none; background: none; outline: none; }
     .nav-item.active { color: var(--pastel-active); }
     .nav-item:hover {color: var(--pastel-primary); transform: translateY(-4px);}
