--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ body.dark span:not(.material-icons) {
     border-color: var(--border-color) !important; 
     color: var(--text-main);
     /* Tambahkan/Pastikan baris ini ada: */
-    border-radius: 1.5rem !important; /* Sama dengan rounded-3xl di Tailwind */
+    border-radius: 20px !important; /* Sama dengan rounded-3xl di Tailwind */
+    padding: 20px; 
+    position: relative; 
     overflow: hidden; /* Menjaga isi chart tidak keluar dari lengkungan */
     transition: background-color 0.3s, border-color 0.3s;
 }
