--- a/index.html
+++ b/index.html
@@ -120,17 +120,68 @@ body.dark span:not(.material-icons) {
     .stat-card2 { background: #f2d7ee; padding: 20px; border-radius: 24px; border: 1px solid #f1f5f9; position: relative; overflow: hidden; }
     .stat-card3 { background: #b1e9e5; padding: 20px; border-radius: 24px; border: 1px solid #f1f5f9; position: relative; overflow: hidden; }
 
-    .bottom-nav {
-      background: body.dark ? rgba(30,41,59,0.8) : rgba(255,255,255,0.9);
-      background-color: var(--card-bg);
+    /* Gabungan Bottom Nav yang Mendukung Dark Mode */
+    .bottom-nav { 
+      position: fixed; 
+      bottom: 0px; 
+      left: 0px; 
+      right: 0px; 
+      /* Menggunakan variabel agar otomatis berubah */
+      background-color: var(--card-bg); 
+      backdrop-filter: blur(10px); 
+      height: 70px; 
+      border-radius: 20px 20px 0 0; 
+      display: flex; 
+      align-items: center; 
+      justify-content: space-around; 
+      /* Shadow lebih halus di dark mode */
+      box-shadow: 0 -6px 20px rgba(0,0,0,0.05); 
+      z-index: 4000; 
+      border-top: 1px solid var(--border-color);
+      transition: background-color 0.3s, border-color 0.3s;
     }
-    .bottom-nav { position: fixed; bottom: 0px; left: 0px; right: 0px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); height: 70px; border-radius: 20px 20px 0 0; display: flex; align-items: center; justify-content: space-around; box-shadow: 0 -6px 20px rgba(0,0,0,0.1); z-index: 4000; }
-    .nav-item { color: var(--pastel-muted); display: flex; flex-direction: column; align-items: center; font-size: 9px; font-weight: 800; text-transform: uppercase; border: none; background: none; outline: none; }
-    .nav-item.active { color: var(--pastel-active); }
-    .nav-item:hover {color: var(--pastel-primary); transform: translateY(-4px);}
-    .nav-item:hover .material-icons {filter: drop-shadow(0 4px 6px rgba(139,140,248,0.35));}
-    .btn-add-center { background: var(--pastel-primary); color: white; width: 58px; height: 58px; border-radius: 22px; display: flex; align-items: center; justify-content: center; transform: translateY(-22px); box-shadow: 0 10px 18px rgba(99,102,241,0.3); border: 4px solid white; cursor: pointer; }
-    .btn-add-center:hover {transform: translateY(-26px) scale(1.05);box-shadow: 0 14px 24px rgba(139,140,248,0.45);}
+
+    /* Memperbaiki warna teks item nav agar tidak hilang */
+    .nav-item { 
+      color: var(--text-muted); /* Menggunakan variabel teks redup */
+      display: flex; 
+      flex-direction: column; 
+      align-items: center; 
+      font-size: 9px; 
+      font-weight: 800; 
+      text-transform: uppercase; 
+      border: none; 
+      background: none; 
+      outline: none; 
+      transition: color 0.3s, transform 0.2s;
+    }
+
+    .nav-item.active { 
+      color: var(--pastel-active); 
+    }
+
+    /* Memperbaiki tombol tambah tengah agar bordernya tidak putih mencolok di dark mode */
+    .btn-add-center { 
+      background: var(--pastel-primary); 
+      color: white; 
+      width: 58px; 
+      height: 58px; 
+      border-radius: 22px; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      transform: translateY(-22px); 
+      box-shadow: 0 10px 18px rgba(99,102,241,0.3); 
+      /* Border mengikuti warna background agar serasi */
+      border: 4px solid var(--card-bg); 
+      cursor: pointer; 
+      transition: all 0.3s;
+    }
+
+    /* Penyesuaian shadow saat hover di mode dark */
+    body.dark .btn-add-center {
+      box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+    }
     
     .warga-card { background: white; padding: 12px; border-radius: 20px; display: flex; align-items: center; gap: 12px; margin-bottom: 10px; border: 1px solid #f1f5f9; cursor: pointer; transition: transform 0.2s; }
     .warga-card:active { transform: scale(0.98); }
