--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
     /* Variabel Khusus Dark Mode */
     body.dark {
+      *:not(.material-icons):not(button):not(.btn-add-center) {
+        /* Jika elemen memiliki class warna teks bawaan Tailwind yang gelap, kita paksa jadi terang */
+        border-color: var(--border-color) !important;
       --bg-milk: #0f172a; /* Slate 900 */
       --card-bg: #1e293b; /* Slate 800 */
       --text-main: #f1f5f9; /* Slate 100 */
@@ -47,6 +50,11 @@
       --border-color: #334155; /* Slate 700 */
       --input-bg: #0f172a;
     }
+      /* Khusus untuk teks yang menggunakan class Tailwind slate-800/700/900 */
+    body.dark .text-slate-800, 
+    body.dark .text-slate-700, 
+    body.dark .text-slate-900 {
+    
 body.dark h1, 
 body.dark h2, 
 body.dark h3, 
